kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adjust-test-app
spec:
  rules:
    - host: "k8s.am.gs.team"
      http:
        paths:
          - pathType: Prefix
            path: "/adjust-test-app"
            backend:
              service:
                name: adjust-test-app
                port:
                  number: 80
